spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__zeroextending_to_shorter_value_single_bit.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> int<1> {
    let a: int<2> = 0;
    let b: int<1> = std::conv::zext(a);
    b
}


error: Zero-extending to a shorter value
  ┌─ testinput:3:21
  │
3 │     let b: int<1> = std::conv::zext(a);
  │                     ^^^^^^^^^^^^^^^^^^
  │                     │               │
  │                     │               This value is 2 bits
  │                     The value is zero-extended to 1 bit here
  │
  = Zero-extension cannot decrease width, use trunc instead
  │
3 │     let b: int<1> = trunc(a);
  │                     ~~~~~


